brat/test/golden/kernel/classical_return.brat.golden
Error in test/golden/kernel/classical_return.brat@5:1
-- `Bool`. We could probably catch this and make the error message nicer.
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
f :: { Qubit -o Qubit, Int }
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
f = { q -> q, 1 }
^^^^^^^^^^^^^^^^^

  Type error: Can't find type constructor Int in this context

